# poetry-failure-repro

./: LICENSE  README.md  setup.py
_poetry_example/: pyproject.toml
