[tool.poetry]
name = "poetry-failure-repro"
version = "0.1.0"
description = ""
authors = ["Colin Atkinson <colin@atakama.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
another-pkg = {git = "git@github.com:colatkinson/poetry-failure-repro.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
